__HEADER__([[[Octave-Forge News Archive]]])

<div class="section">
<p>This is an abbreviated list of the changes that were introduced in
various versions of octave-forge. For a full list of changes please
see the <a href="ChangeLog">ChangeLog</a>.</p>
</div>
<div class="section">
<dl>
<dt>December ??, 2007</dt>
<dd>
<p>Release of Octave-forge tested against Octave 2.9.18. Many packages
 will also function function with earlier versions of Octave 2.9.
 Notable changes in this release include:</p>
<ul>
   <li>jhandles: Addition of PS and TeX text support. Better
   integration with core Octave plotting functions.</li>
   <li>plot: Removal of many functions ported to 2.9.18. Additional of
   ellipsoid function.</li>
   <li>odepkg: First version of and oct-file implemention of the solvers.</li>
   <li>audio: Avoid 64bit issues in sound.m.</li>
   <li>MinGW: Build support for MinGW.</li>
   <li>general bug fixes and improvements.</li>
</ul>
</dd>
<dt>November 11, 2007</dt>
<dd>Updated the OS X binary release to Octave.app 2.9.17.
</dd>
<dt>November 06, 2007</dt>
<dd>Updated Windows installer to Octave 2.9.16.
</dd>
<dt>November 2, 2007</dt>
<dd>Updated the OS X binary release to Octave.app 2.9.16.
</dd>
<dt>October 16, 2007</dt>
<dd>Updated Windows installer to Octave 2.9.15.
</dd>
<dt>October 14, 2007</dt>
<dd>Updated the OS X binary release to Octave.app 2.9.15.
</dd>
<dt>October 14, 2007</dt>
<dd>
<p>Release of Octave-forge tested against Octave 2.9.15. Many packages
 will also function function with earlier versions of Octave 2.9.
 Notable changes in this release include:</p>
<ul>
   <li>jhandles: Significant improvement in the GUI functions and
   graphics handles compatibility, including stemseries, barseries,
   GUI callbacks, postscript output, etc.</li>
   <li>java: Allow for waitfor functions in Octave. Use dlopen/dlsym
   rather than symbolic linking to the JVM in linux and OS X
   platforms.</li>