@@ -3,7 +3,7 @@ Alberto Pose                <apose@alu.itba.edu.ar>
 Alberto Terruzzi            <t-albert@libero.it>
 Alexander Barth             <abarth@marine.usf.edu>
 Alois Schloegl              <a.schloegl@ieee.org>
-Andreas Stahel              
+Andreas Stahel              <Andreas.Stahel@bfh.ch>
 Andreas Weingessel          <Andreas.Weingessel@ci.tuwien.ac.at>
 Andrew Collier              <abcollier@users.sourceforge.net>
 Andrew Gierth               
@@ -53,6 +53,7 @@ Jorge Barros de Abreu
 Jose Luis Gutierrez         <jlg@gmx.at>
 Josep Mones i Teixidor      <jmones@puntbarra.com>
 Joseph Wakeling             <joseph.wakeling@webdrake.net>
+Juan Aguado                 
 Julius O. Smith III         
 Justus H. Piater            <Justus.Piater@ULg.ac.be>
 Kai Habel                   <kai.habel@gmx.de>
@@ -89,9 +90,7 @@ Richard Shrager
 Richard Shrager, Arthur Jutan, Ray Muzic
 Rick Niles                  <niles@axp745.gsfc.nasa.gov>
 Rick Richardson             
-Roberto A. F. Almeida       <roberto@calvin.ocfis.furg.br>
 Rolf Fabian                 <fabian@tu-cottbus.de>
-Shai Ayal                   
 Stefan van der Walt         <stefan@sun.ac.za>
 Sylvain Pelissier           <sylvain.pelissier@gmail.com>
 Sylvain Pelissier and Paul Kienzle
