@@ -48,7 +48,7 @@ recent versions of octave-forge. For a full list of changes please
 see the <a href="NEWS.html">News Archive</a> or the
 <a href="ChangeLog">ChangeLog</a>.</p>
 <dl>
-<dt>December ??, 2007</dt>
+<dt>December 12, 2007</dt>
 <dd>
 <p>Release of Octave-forge tested against Octave 2.9.18. Many packages
  will also function function with earlier versions of Octave 2.9.
@@ -56,13 +56,17 @@ see the <a href="NEWS.html">News Archive</a> or the
 <ul>
    <li>jhandles: Addition of PS and TeX text support. Better
    integration with core Octave plotting functions.</li>
-   <li>plot: Removal of many functions ported to 2.9.18. Additional of
+   <li>plot: Removal of many functions ported to 2.9.18. Addition of
    ellipsoid function.</li>
-   <li>odepkg: First version of and oct-file implemention of the solvers.</li>
+   <li>odepkg: First version of an IDE problem solver in form of an 
+   oct-file implemention.</li>
    <li>audio: Avoid 64bit issues in sound.m.</li>
    <li>MinGW: Build support for MinGW.</li>
    <li>general bug fixes and improvements.</li>
 </ul>
+</dd>
+<dt>December 08, 2007</dt>
+<dd>Updated the OS X binary release to Octave.app 2.9.18.
 </dd>
 <dt>November 11, 2007</dt>
 <dd>Updated the OS X binary release to Octave.app 2.9.17.
@@ -107,72 +111,6 @@ see the <a href="NEWS.html">News Archive</a> or the
    compatibility, removing the function pascal_stat and weibstat and
    replacing them with nbinstat and wblstat.</li>
    <li>arpack: Bug fix to allow non convergence to be correctly flagged.</li>
-   <li>general bug fixes and improvements.</li>
-</ul>
-</dd>
-<dt>September 21, 2007</dt>
-<dd>Updated the OS X binary release to use Octave 2.9.14. There are
-significant speed improvements in this release, due to an improved
-compilation and so all Mac users are urged to update.
-</dd>
-<dt>July 26, 2007</dt>
-<dd>Updated the Windows binary release to use Octave 2.9.13.
-</dd>
-<dt>July 26, 2007</dt>
-<dd>
-<p>Release of Octave-forge tested against Octave 2.9.13. Many packages
- will also function function with earlier versions of Octave 2.9.
- Notable changes in this release include:</p>
-<ul>
-   <li>jhandles: New java based plotting and gui package based on
-   JOGL.</li>
-   <li>bim: New package for solving Diffusion Advection Reaction (DAR)
-   Partial Differential Equations based on the Finite Volume
-   Scharfetter-Gummel (FVSG) method. </li>
-   <li>msh: New package for triangular and tetrahedral meshing based
-   on GMSH</li>
-   <li>fpl: New packages containing a collection of routines to plot
-   data on unstructured triangular and tetrahedral meshes based on
-   OpenDX.</li>
-   <li>triangular: New package for an example of how to add user types
-   for Octave.</li>
-   <li>odebvp: New package for boundary value ODE problems.</li>
-   <li>econometrics: Calculate kernel weights in an oct-file for
-   performance.</li>
-   <li>java: Java package can now build correctly under Windows, Mac
-   OS X and Linux. Allow callback functions<\li>
-   <li>statistics: Fix histfit as normal_pdf now takes the variance
-   and not the deviation.</li>
-   <li>signal: Add axes to specgram. New functions barthannwin,
-   blackmanharris, bohmanwin, diric, gauspuls, gmonopuls, nuttallwin
-   and sawtooth.</li>
-   <li>comm: new functions qfunc and qfuncinv.<\li>
-   <li>time: new function daysact.m.</li>
-   <li>Improvements in the SRPM, RPM, MSVC and Mac OS X build systems.</li>
-   <li>Remove functions ported to Octave 2.9.13.</li>
-   <li>general bug fixes and improvements.</li>
-</ul>
-</dd>
-<dt>July 4, 2007</dt>
-<dd>Added Octave.app 2.9.12 for OS X.
-</dd>
-<dt>May 26, 2007</dt>
-<dd>
-<p>Release of Octave-forge tested against Octave 2.9.12. Many packages
- will also function function with earlier versions of Octave 2.9.
- Notable changes in this release include:</p>
-<ul>
-   <li>secs1d: A new package for 1D semiconductor drift diffusion
-   modeling.</li>
-   <li>secs2d: A new package for 2D semiconductor drift diffusion
-   modeling.</li>
-   <li>outliers: New package for outlier detection.</li>
-   <li>sockets: New package for posix sockets layer.</li>
-   <li>comm: New functions lz77enco and lz77deco.
-   <li>signal: New function tukeywin.</li>
-   <li>tsa: New functions selmo2.
-   <li>pt_BR: Update portuguese function translations for pre Octave
-    2.9.11</li>
    <li>general bug fixes and improvements.</li>
 </ul>
 </dd>
