@@ -1,4 +1,5 @@
 configure
+autom4te.cache
 *.d
 *.o
 PKG_ADD
