@@ -1,2 +1,3 @@
 configure
 autom4te.cache
+aclocal.m4
